# libzhuyin

./: .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  libzhuyin.pc.in  libzhuyin.spec.in
data/: CMakeLists.txt  Makefile.am  table.conf
doc/: Makefile.am  gen_unigram.1  libzhuyin.1
scripts/: Makefile.data  bopomofo.py  bopomofokeyboard.py  chewing.py  chewing_enum.h.in  chewing_table.h.in  chewingkey.py  correct.py  genbopomofoheader.py  genchewingkey.py  genpinyinheader.py  genpinyintable.py  pinyin.py  pinyin_parser_table.h.in  pinyintable.py  utils.py
src/: CMakeLists.txt  Makefile.am  libpinyin.ver  libzhuyin.ver  pinyin.cpp  pinyin.h  pinyin_internal.h  zhuyin.cpp  zhuyin.h  zhuyin_internal.cpp  zhuyin_internal.h
src/include/: Makefile.am  memory_chunk.h  novel_types.h
src/lookup/: lookup.cpp  lookup.h  phrase_lookup.cpp  phrase_lookup.h  pinyin_lookup2.cpp  pinyin_lookup2.h
src/storage/: Makefile.am  chewing_enum.h  chewing_key.h  chewing_large_table.cpp  chewing_large_table.h  chewing_table.h  facade_chewing_table.h  facade_phrase_table2.h  flexible_ngram.h  ngram.cpp  ngram.h  phrase_index.cpp  phrase_index.h  phrase_index_logger.h  phrase_large_table2.cpp  phrase_large_table2.h  pinyin_custom2.h  pinyin_parser2.cpp  pinyin_parser2.h  pinyin_parser_table.h  pinyin_phrase2.h  table_info.cpp  table_info.h  tag_utility.cpp  tag_utility.h  zhuyin_custom2.h
tests/: CMakeLists.txt  Makefile.am  test_chewing.cpp  test_phrase.cpp  test_pinyin.cpp  tests_helper.h  timer.h
tests/include/: CMakeLists.txt
tests/lookup/: CMakeLists.txt  Makefile.am  test_phrase_lookup.cpp  test_pinyin_lookup.cpp
tests/storage/: CMakeLists.txt  Makefile.am  test_chewing_table.cpp  test_flexible_ngram.cpp  test_ngram.cpp  test_parser2.cpp  test_phrase_index.cpp  test_phrase_index_logger.cpp  test_phrase_table.cpp  test_table_info.cpp
utils/: utils_helper.h
utils/segment/: CMakeLists.txt  Makefile.am  mergeseq.cpp  ngseg.cpp  spseg.cpp
utils/storage/: CMakeLists.txt  Makefile.am  export_interpolation.cpp  gen_binary_files.cpp  gen_pinyin_table.cpp  gen_zhuyin_table.cpp  import_interpolation.cpp
utils/training/: CMakeLists.txt  Makefile.am  estimate_interpolation.cpp  estimate_k_mixture_model.cpp  eval_correction_rate.cpp  export_k_mixture_model.cpp  gen_deleted_ngram.cpp  gen_k_mixture_model.cpp  gen_ngram.cpp  gen_unigram.cpp  import_k_mixture_model.cpp  k_mixture_model.h  k_mixture_model_to_interpolation.cpp  merge_k_mixture_model.cpp  prune_k_mixture_model.cpp  validate_k_mixture_model.cpp
